--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "health",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://Woolfy25.github.io/Health-App/",
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.8",
